--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "prebuild": "sed -i \"s/\\\"dev\\\"/\\\"${MD_VERSION:-${SOURCE_VERSION:-unknown}-dev}\\\"/g\" src/elm/MassiveDecks/Version.elm",
-    "build": "npx webpack --mode=production",
-    "dev": "npx webpack-dev-server --mode=development"
+    "build": "npx webpack --max_old_space_size=4096 --mode=production",
+    "dev": "nohup npx webpack-dev-server --mode=development &"
   },
   "files": [
     "dist/*"
@@ -45,6 +45,7 @@
     "@types/chrome": "^0.0.114",
     "@types/chromecast-caf-receiver": "^5.0.5",
     "@types/chromecast-caf-sender": "^1.0.3",
+    "ajv": "^6.12.2",
     "app-manifest-loader": "^2.4.1",
     "chromecast-device-emulator": "^1.2.7",
     "clean-webpack-plugin": "^3.0.0",
@@ -74,7 +75,7 @@
     "terser-webpack-plugin": "^3.0.4",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   }
