Fixed 'french flaps'

--- a/server/decks/cah-base-en.deck.json5
+++ b/server/decks/cah-base-en.deck.json5
@@ -722,7 +722,7 @@
     "form rejection slip",
     "found poetry",
     "Frankenstein’s monster",
-    "French aps",
+    "French flaps",
     "Gary Shteyngart",
     "George R. R. Martin",
     "giant worm excretion",
