Updated nginx config for servers

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -35,15 +35,17 @@ http {
     keepalive_timeout 65;
 
     upstream server {
-        server server:8081;
+        server localhost:8081;
+    }
+
+    upstream client {
+        server localhost:8080;
     }
 
     server {
-        listen 8080 default_server;
-        listen [::]:8080 default_server;
+        listen 80 default_server;
+        listen [::]:80 default_server;
         server_name _;
-
-        root "/usr/share/nginx/html";
 
         location /api {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -55,21 +57,25 @@ http {
         }
 
         location /assets {
-            expires 365d;
+            proxy_set_header Host $http_host;
+            proxy_pass http://client/assets;
         }
 
-        location ~ ^/games/(.*)/?$ {
-            try_files "" /index.html;
+        location = /games {
+            proxy_pass http://client/index.html;
         }
 
         location = /cast {
-            try_files "" /cast.html;
+            proxy_set_header Host $http_host;
+            proxy_pass http://client/cast.html;
         }
 
         location = / {
-            try_files "" /index.html;
+            proxy_set_header Host $http_host;
+            proxy_pass http://client/index.html;
         }
 
         error_page 404 /;
+        root "/usr/share/nginx/html";
     }
 }
